--- a/ch-user-core/src/main/resources/paas/sdkmode/aiopt-ch-user.properties
+++ b/ch-user-core/src/main/resources/paas/sdkmode/aiopt-ch-user.properties
@@ -1,10 +1,13 @@
 #Configuration center configuration information
-#Sat Sep 24 21:02:14 CST 2016
-/com/ai/opt={}
-/com/ai/opt/paas-dssns-dss-mapped={\n  "ch-user-detail-dss"\: "DSS002"\n}
-/com={}
+#Thu Sep 29 15:08:16 CST 2016
 /com/ai/opt/db-conf={\n  "ch-user-db"\: {\n    "driverClassName"\: "com.mysql.jdbc.Driver",\n    "jdbcUrl"\: "jdbc\:mysql\://10.19.13.15\:34306/tstslpuserdb1?useUnicode\=true&characterEncoding\=UTF-8",\n    "username"\: "tstslpuser1",\n    "password"\: "tstslpuser1@8899",\n    "autoCommit"\: "true",\n    "connectionTimeout"\: "30000",\n    "idleTimeout"\: "600000",\n    "maxLifetime"\: "1800000",\n    "maximumPoolSize"\: "10"\n  }\n}
-/com/ai/opt/paas-service-pwd-mapped={\n  "IDPS001"\: "1q2w3e4r",\n  "DSS002"\: "1q2w3e4r",\n  "MCS003"\:"1q2w3e4r"\n}
 /com/ai/opt/paas-idpsns-idps-mapped={\n  "ch-user-web-idps"\: "IDPS001"\n}
-/com/ai/opt/paas-cachens-mcs-mapped={ "com.ai.opt.uni.session.sessionclient.chuserweb"\: "MCS003" }
+/com/ai/opt/sdkmode-paas-dss-mongodb-mapped={\n  "DSS002"\: {\n    "mongoServer"\: "10.19.13.15\:27017",\n    "database"\: "dss002",\n    "userName"\: "dss002user",\n    "password"\: "dss002pwd",\n    "bucket"\: "gridfsdss"\n  }\n}
+/com/ai/opt/paas-service-pwd-mapped={\n  "IDPS001"\: "1q2w3e4r",\n  "DSS002"\: "1q2w3e4r",\n  "MCS003"\:"1q2w3e4r"\n}
 /com/ai={}
+/com/ai/opt/paas-dssns-dss-mapped={\n  "ch-user-detail-dss"\: "DSS002"\n}
+/com/ai/opt/paas-cachens-mcs-mapped={ "com.ai.opt.uni.session.sessionclient.chuserweb"\: "MCS003" }
+/com/ai/opt={}
+/com={}
+/com/ai/opt/sdkmode-paas-idps-gm-mapped={\n  "IDPS001"\:\n  {\n  \t"interUrl"\:"http\://10.19.13.18\:24000/iPaas-IDPS",\n  \t"intraUrl"\:"http\://10.19.13.18\:24000/iPaas-IDPS"     \n  }\n}
+/com/ai/opt/sdkmode-paas-mcs-redis-mapped={\n  "MCS003"\: {\n    "mcs.host"\: "10.1.130.84\:16379",\n    "mcs.maxtotal"\: "200",\n    "mcs.maxIdle"\: "10",\n    "mcs.minIdle"\: "5",\n    "mcs.testOnBorrow"\: "true",\n    "mcs.password"\: ""\n  }\n}
