--- a/ch-user-core/src/main/resources/dubbo/dubbo.properties
+++ b/ch-user-core/src/main/resources/dubbo/dubbo.properties
@@ -1,10 +1,19 @@
+#dubbo\u540d\u79f0
 dubbo.appname=ch-user
+#dubbo\u6ce8\u518c\u534f\u8bae
 dubbo.registry.protocol=zookeeper
+#dubbo\u6ce8\u518c\u534f\u8bae\u5730\u5740
 dubbo.registry.address=10.19.13.13:29181
 #dubbo.registry.address=127.0.0.1:2181
+#dubbo\u6ce8\u518c\u6587\u4ef6
 dubbo.registry.file=../logs/registry/user-dubbo-registry.cache
+#dubbo\u7aef\u53e3
 ch.user.dubbo.port=10884
+#dubbo\u534f\u8bae\u65b9\u5f0f
 dubbo.protocol=rest
+#dubbo\u751f\u4ea7\u8005\u8d85\u65f6\u65f6\u95f4
 dubbo.provider.timeout=200000
+#dubbo\u542f\u52a8\u5bb9\u5668
 dubbo.protocol.server=tomcat
+#dubbo\u534f\u8bae\u547d\u540d\u7a7a\u95f4
 dubbo.protocol.contextpath=ch-user
