--- a/ch-user-core/src/main/resources/paas/ipaas/aiopt-ch-user-ccs.properties
+++ b/ch-user-core/src/main/resources/paas/ipaas/aiopt-ch-user-ccs.properties
@@ -1,9 +1,12 @@
 #Configuration center configuration information
 #Sat Sep 24 21:02:14 CST 2016
 /com/ai/opt={}
+#paas,dss\u670d\u52a1\u914d\u7f6e
 /com/ai/opt/paas-dssns-dss-mapped={\n  "ch-user-detail-dss"\: "DSS002"\n}
 /com={}
+#\u6570\u636e\u5e93\u8fde\u63a5\u4fe1\u606f
 /com/ai/opt/db-conf={\n  "ch-user-db"\: {\n    "driverClassName"\: "com.mysql.jdbc.Driver",\n    "jdbcUrl"\: "jdbc\:mysql\://10.19.13.15\:34306/tstslpuserdb1?useUnicode\=true&characterEncoding\=UTF-8",\n    "username"\: "tstslpuser1",\n    "password"\: "tstslpuser1@8899",\n    "autoCommit"\: "true",\n    "connectionTimeout"\: "30000",\n    "idleTimeout"\: "600000",\n    "maxLifetime"\: "1800000",\n    "maximumPoolSize"\: "10"\n  }\n}
+#paas\u670d\u52a1\u914d\u7f6e
 /com/ai/opt/paas-service-pwd-mapped={\n  "IDPS001"\: "1q2w3e4r",\n  "DSS002"\: "1q2w3e4r",\n  "MCS003"\:"1q2w3e4r"\n}
 /com/ai/opt/paas-idpsns-idps-mapped={\n  "ch-user-web-idps"\: "IDPS001"\n}
 /com/ai/opt/paas-cachens-mcs-mapped={ "com.ai.opt.uni.session.sessionclient.chuserweb"\: "MCS003" }
