--- a/ch-user-core/src/main/resources/context/jdbc.properties
+++ b/ch-user-core/src/main/resources/context/jdbc.properties
@@ -1,15 +1,15 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc:mysql://10.19.13.15:34306/tstslpuserdb1?useUnicode=true&characterEncoding=UTF-8
-jdbc.username=tstslpuser1
-jdbc.password=tstslpuser1@8899
-#jdbc.jdbcUrl=jdbc:mysql://127.0.0.1:3306/system?useUnicode=true&characterEncoding=UTF-8
-#jdbc.username=root
-#jdbc.password=123456
-jdbc.autoCommit=true
-jdbc.connectionTimeout=30000
-jdbc.idleTimeout=600000
-jdbc.maxLifetime=1800000 
-jdbc.maximumPoolSize=10
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.jdbcUrl=jdbc:mysql://10.19.13.15:34306/tstslpuserdb1?useUnicode=true&characterEncoding=UTF-8
+#jdbc.username=tstslpuser1
+#jdbc.password=tstslpuser1@8899
+##jdbc.jdbcUrl=jdbc:mysql://127.0.0.1:3306/system?useUnicode=true&characterEncoding=UTF-8
+##jdbc.username=root
+##jdbc.password=123456
+#jdbc.autoCommit=true
+#jdbc.connectionTimeout=30000
+#jdbc.idleTimeout=600000
+#jdbc.maxLifetime=1800000 
+#jdbc.maximumPoolSize=10
 
 
 
