--- a/ch-user-core/src/main/resources/dubbo/dubbo.properties
+++ b/ch-user-core/src/main/resources/dubbo/dubbo.properties
@@ -11,8 +11,10 @@ dubbo.registry.file=../logs/registry/user-dubbo-registry.cache
 ch.user.dubbo.port=10884
 #dubbo\u534f\u8bae\u65b9\u5f0f
 dubbo.protocol=rest
-#dubbo\u751f\u4ea7\u8005\u8d85\u65f6\u65f6\u95f4
-dubbo.provider.timeout=200000
+#\u63d0\u4f9b\u8005\u8d85\u65f6\u65f6\u95f4
+dubbo.provider.timeout=1000
+#\u8bbe\u7f6e\u6d88\u8d39\u8005\u8d85\u65f6\u65f6\u95f4
+dubbo.consumer.timeout=2000
 #dubbo\u542f\u52a8\u5bb9\u5668
 dubbo.protocol.server=tomcat
 #dubbo\u534f\u8bae\u547d\u540d\u7a7a\u95f4
